--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "lint": "eslint app/",
     "lint:fix": "eslint app/ --fix"
   },
-	"rnpm": {
-		"assets": ["./assets/fonts"]
-	},
+  "rnpm": {
+    "assets": [
+      "./assets/fonts"
+    ]
+  },
   "jest": {
     "preset": "jest-expo"
   },
@@ -33,10 +35,13 @@
     "color": "2.0.0",
     "eslint": "^4.14.0",
     "expo": "^23.0.4",
+    "hoist-non-react-statics": "2.3.0",
     "moment": "2.18.1",
     "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-native": "0.50.3",
-    "react-native-extended-stylesheet": "0.8.0"
+    "react-native-dropdownalert": "3.1.2",
+    "react-native-extended-stylesheet": "0.8.0",
+    "react-navigation": "1.0.0-beta.21"
   }
 }
